==> ARMmbed/mbed-os/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF52/TARGET_MCU_NRF52840/USBPhy_Nordic.cpp <==
#include "USBPhyHw.h"
#include "platform/mbed_critical.h"
#include "platform/mbed_assert.h"
#define MAX_PACKET_SIZE_SETUP NRF_DRV_USBD_EPSIZE
#define MAX_PACKET_NON_ISO    NRF_DRV_USBD_EPSIZE
#define MAX_PACKET_ISO        NRF_DRV_USBD_ISOSIZE
#define ENDPOINT_NON_ISO      (USB_EP_ATTR_ALLOW_BULK | USB_EP_ATTR_ALLOW_INT)
#define IS_IN_EP(ep)    (ep & 0x80)  // Checks if the given endpoint is an IN endpoint (MSB set)
#define IS_OUT_EP(ep)   (ep & ~0x80) // Checks if the given endpoint is an OUT endpoint (MSB clear)
#define SETUP_TRANSFER_DIR_MASK 0x80
#define USBD_DEBUG 0

void USBPhyHw::init(USBPhyEvents *events)
{

    // Disable the USBD interrupts
    // Interrupts will be reenabled by the Nordic driver
    NRFX_IRQ_DISABLE(USBD_IRQn);

    if (this->events == NULL) {
        sleep_manager_lock_deep_sleep();
    }

    this->events = events;

    ret_code_t ret;

    // Initialize power module to track USB Power events
    ret = nrfx_power_init(NULL);
    MBED_ASSERT(ret == NRF_SUCCESS);


    // Register callback for USB Power events
    static const nrfx_power_usbevt_config_t config = {
        .handler = power_usb_event_handler
    };

    nrfx_power_usbevt_init(&config);

    // Initialize USB Device driver
    ret = nrf_drv_usbd_init(usbd_event_handler);
    MBED_ASSERT(ret == NRF_SUCCESS);

    /* Configure selected size of the packed on EP0 */
    nrf_drv_usbd_ep_max_packet_size_set(NRF_DRV_USBD_EPOUT0, MAX_PACKET_SIZE_SETUP);
    nrf_drv_usbd_ep_max_packet_size_set(NRF_DRV_USBD_EPIN0, MAX_PACKET_SIZE_SETUP);

    // Store a reference to this instance
    instance = this;

    virtual_status_xfer_event = false;

    /*
     * Configure ISOIN endpoint to respond with ZLP when
     * no data is ready to be sent
     */
    NRF_USBD->ISOINCONFIG |= 0x01; // set RESPONSE to 1 (respond with ZLP)

    // Set up the IRQ handler
    NVIC_SetVector(USBD_IRQn, (uint32_t)USBD_HAL_IRQHandler);

    // Enable the power events
    nrfx_power_usbevt_enable();

}

void USBPhyHw::deinit()
{
    // Disconnect and disable interrupt
    disconnect();

    // Disable the USB Device driver
    ret_code_t ret = nrf_drv_usbd_uninit();
    MBED_ASSERT(ret == NRF_SUCCESS);

    // Disable the power peripheral driver
    nrfx_power_uninit();

    if (this->events != NULL) {
        sleep_manager_unlock_deep_sleep();
    }

    this->events = NULL;

    // Clear the instance pointer
    instance = 0;
}

void USBPhyHw::connect()
{

    // To save power, we only enable the USBD peripheral
    // when there's actually VBUS detected

    // So flag that the USB stack is ready to connect
    this->connect_enabled = true;

    // If VBUS is already available, enable immediately
    if (nrfx_power_usbstatus_get() == NRFX_POWER_USB_STATE_CONNECTED) {
        // Enabling USB will cause NRF_DRV_POWER_USB_EVT_READY
        // to occur, which will start the USBD peripheral
        // when the internal regulator has settled
        if (!nrf_drv_usbd_is_enabled()) {
            nrf_drv_usbd_enable();
        }

        if (nrfx_power_usbstatus_get() == NRFX_POWER_USB_STATE_READY
                && !nrf_drv_usbd_is_started()) {
            nrf_drv_usbd_start(true);
        }
    }
}

void USBPhyHw::disconnect()
{

    this->connect_enabled = false;

    if (nrf_drv_usbd_is_started()) {
        nrf_drv_usbd_stop();
    }
    if (nrf_drv_usbd_is_enabled()) {
        nrf_drv_usbd_disable();
    }
}

void USBPhyHw::ep0_read(uint8_t *data, uint32_t size)
{

    // Check for status stage
    if (data == NULL && size == 0) {
        // If the data stage transfer direction was OUT
        if (setup_buf.bmRequestType & SETUP_TRANSFER_DIR_MASK) {
            // This is the status stage -- trigger the status task and notify the Mbed stack
            // Don't trigger status stage unless endpoint is not busy!
            // (Causes an undocumented hardware-initiated stall on the control endpoint)
            if (nrf_drv_usbd_ep_is_busy(NRF_DRV_USBD_EPIN0)) {
                nrf_usbd_shorts_enable(NRF_USBD_SHORT_EP0DATADONE_EP0STATUS_MASK);
            } else {
                nrf_usbd_task_trigger(NRF_USBD_TASK_EP0STATUS);
            }

            virtual_status_xfer_event = true;

            // Trigger an interrupt to process the virtual status event
            NRFX_IRQ_PENDING_SET(USBD_IRQn);

            return;
        }
    }

    nrf_drv_usbd_transfer_t *transfer = get_transfer_buffer((usb_ep_t)(NRF_DRV_USBD_EPOUT0));
    memset(transfer, 0, sizeof(nrf_drv_usbd_transfer_t));
    transfer->p_data.rx = data;
    transfer->size = size;

    nrf_drv_usbd_setup_data_clear(); // tell the hardware to receive another OUT packet

    ret_code_t ret = nrf_drv_usbd_ep_transfer(NRF_DRV_USBD_EPOUT0, transfer);
    MBED_ASSERT(ret == NRF_SUCCESS);
}

uint32_t USBPhyHw::ep0_read_result()
{
    return nrf_drv_usbd_epout_size_get(NRF_DRV_USBD_EPOUT0);
}

void USBPhyHw::ep0_write(uint8_t *buffer, uint32_t size)
{

    // Check for status stage
    if (buffer == NULL && size == 0) {
        // If the requested size was 0 OR the data stage transfer direction was OUT
        if (setup_buf.wLength == 0
                || ((setup_buf.bmRequestType & SETUP_TRANSFER_DIR_MASK) == 0)) {

            // This is the status stage -- trigger the status task and notify the Mbed stack

            // Don't trigger status stage unless endpoint is not busy!
            // (Causes an undocumented hardware-initiated stall on the control endpoint)
            if (nrf_drv_usbd_ep_is_busy(NRF_DRV_USBD_EPOUT0)) {
                nrf_usbd_shorts_enable(NRF_USBD_SHORT_EP0DATADONE_EP0STATUS_MASK);
            } else {
                nrf_usbd_task_trigger(NRF_USBD_TASK_EP0STATUS);
            }

            virtual_status_xfer_event = true;

            // Trigger an interrupt to process the virtual status event
            NRFX_IRQ_PENDING_SET(USBD_IRQn);

            return;
        }
    }

    nrf_drv_usbd_transfer_t *transfer = get_transfer_buffer(NRF_DRV_USBD_EPIN0);
    memset(transfer, 0, sizeof(nrf_drv_usbd_transfer_t));
    transfer->p_data.tx = buffer;
    transfer->size = size;

    if (size == 0) {
        transfer->flags |= NRF_DRV_USBD_TRANSFER_ZLP_FLAG;
    }

    ret_code_t ret = nrf_drv_usbd_ep_transfer(NRF_DRV_USBD_EPIN0, transfer);
    MBED_ASSERT(ret == NRF_SUCCESS);
}

bool USBPhyHw::endpoint_add(usb_ep_t endpoint, uint32_t max_packet, usb_ep_type_t type)
{
    nrf_drv_usbd_ep_t nrf_ep = get_nordic_endpoint(endpoint);
    nrf_drv_usbd_ep_enable(nrf_ep);
    nrf_drv_usbd_ep_max_packet_size_set(nrf_ep, max_packet);
    return nrf_drv_usbd_ep_enable_check(nrf_ep);
}

void USBPhyHw::endpoint_remove(usb_ep_t endpoint)
{
    nrf_drv_usbd_ep_t nrf_ep = get_nordic_endpoint(endpoint);
    // Reset data toggle for bulk/interrupt endpoints
    if (nrf_ep != NRF_DRV_USBD_EPOUT8 && nrf_ep != NRF_DRV_USBD_EPIN8) {
        nrf_drv_usbd_ep_dtoggle_clear(nrf_ep);
    }

    nrf_drv_usbd_ep_disable(nrf_ep);
}

void USBPhyHw::endpoint_stall(usb_ep_t endpoint)
{
    nrf_drv_usbd_ep_stall(get_nordic_endpoint(endpoint));
}

void USBPhyHw::endpoint_unstall(usb_ep_t endpoint)
{
    nrf_drv_usbd_ep_t ep = get_nordic_endpoint(endpoint);

    // Unstall may be called on an endpoint that isn't stalled
    if (nrf_drv_usbd_ep_stall_check(ep)) {
        nrf_drv_usbd_ep_stall_clear(ep);
    }

    // Clear data toggle
    nrf_drv_usbd_ep_dtoggle_clear(ep);

    /*
     * This is a somewhat hacky fix to fully "unload"
     * an IN endpoint after a buffer has been
     * transferred via EasyDMA...
     */

    nrf_drv_usbd_ep_disable(ep);
    nrf_drv_usbd_ep_enable(ep);
}

bool USBPhyHw::endpoint_read(usb_ep_t endpoint, uint8_t *data, uint32_t size)
{
    nrf_drv_usbd_transfer_t *transfer = get_transfer_buffer(endpoint);
    memset(transfer, 0, sizeof(nrf_drv_usbd_transfer_t));
    transfer->p_data.rx = data;
    transfer->size = size;

    ret_code_t ret = nrf_drv_usbd_ep_transfer(get_nordic_endpoint(endpoint), transfer);
    return (ret == NRF_SUCCESS);
}

uint32_t USBPhyHw::endpoint_read_result(usb_ep_t endpoint)
{
    return nrf_drv_usbd_epout_size_get(get_nordic_endpoint(endpoint));
}

bool USBPhyHw::endpoint_write(usb_ep_t endpoint, uint8_t *data, uint32_t size)
{
    nrf_drv_usbd_transfer_t *transfer = get_transfer_buffer(endpoint);
    memset(transfer, 0, sizeof(nrf_drv_usbd_transfer_t));
    transfer->p_data.tx = data;
    transfer->size = size;

    // If this is a zero-length-packet (ZLP)
    // Set the ZLP flag
    if (size == 0) {
        transfer->flags |= NRF_DRV_USBD_TRANSFER_ZLP_FLAG;
    }

    ret_code_t ret = nrf_drv_usbd_ep_transfer(get_nordic_endpoint(endpoint), transfer);
    return (ret == NRF_SUCCESS);
}

void USBPhyHw::process()
{

    if (usb_event_type == USB_HW_EVENT_USBD) {

        // Process regular USBD events
        switch (usb_event.type) {
            case NRF_DRV_USBD_EVT_SUSPEND:
                events->suspend(true);
                break;
            case NRF_DRV_USBD_EVT_RESUME:
                events->suspend(false);
                break;
            case NRF_DRV_USBD_EVT_WUREQ:
                break;
            case NRF_DRV_USBD_EVT_RESET:
                this->_reset();
                events->reset();
                break;
            case NRF_DRV_USBD_EVT_SOF:
                if (sof_enabled) {
                    events->sof(usb_event.data.sof.framecnt);
                }
                break;
            case NRF_DRV_USBD_EVT_EPTRANSFER:
                if (usb_event.data.eptransfer.status == NRF_USBD_EP_OK) {
                    if (!nrf_drv_usbd_ep_stall_check(usb_event.data.eptransfer.ep)) {
                        if (IS_IN_EP(usb_event.data.eptransfer.ep)) {
                            if ((usb_event.data.eptransfer.ep & 0x7F) == 0) {
                                events->ep0_in();
                            } else {
                                events->in((usb_ep_t) usb_event.data.eptransfer.ep);
                            }
                        } else {
                            if ((usb_event.data.eptransfer.ep & 0x7F) == 0) {
                                events->ep0_out();
                            } else {
                                events->out((usb_ep_t) usb_event.data.eptransfer.ep);
                            }
                        }
                    }
                }
                break;
            case NRF_DRV_USBD_EVT_SETUP: {
                nrf_drv_usbd_ep_stall_clear(NRF_DRV_USBD_EPIN0);
                nrf_drv_usbd_ep_stall_clear(NRF_DRV_USBD_EPOUT0);

                // Copy the setup packet into the internal buffer
                nrf_drv_usbd_setup_get(&setup_buf);

                // Notify the Mbed stack
                events->ep0_setup();
            }
            break;
            default:
                break;

        }
    } else if (usb_event_type == USB_HW_EVENT_POWER) {
        // Process USB power-related events
        switch (usb_power_event) {
            case NRFX_POWER_USB_EVT_DETECTED:
                if (this->connect_enabled) {
                    if (!nrf_drv_usbd_is_enabled()) {
                        nrf_drv_usbd_enable();
                    }
                    events->power(true);
                }
                break;
            case NRFX_POWER_USB_EVT_REMOVED:
                events->power(false);
                break;
            case NRFX_POWER_USB_EVT_READY:
                if (!nrf_drv_usbd_is_started()) {
                    nrf_drv_usbd_start(true);
                }
                break;
            default:
                ASSERT(false);
        }
    } else if (usb_event_type == USB_HW_EVENT_VIRTUAL_STATUS) {
        // Notify Mbed stack of status stage transfer completion
        if (setup_buf.bmRequestType & SETUP_TRANSFER_DIR_MASK) { // DATA IN transfer, Status OUT transfer
            events->ep0_out();
        } else {                                                 // DATA OUT transfer, Status IN transfer
            events->ep0_in();
        }
    }

    // Unflag the event type
    usb_event_type = USB_HW_EVENT_NONE;

    // Re-enable interrupt
    enable_usb_interrupts();
}
