==> ARMmbed/mbed-os/usb/device/targets/TARGET_GigaDevice/USBPhy_GD32.cpp <==
#define USBGD_HAL_UNSUPPORTED
#define USBGD_HAL_UNSUPPORTED
#include "USBPhyHw.h"
#include "pinmap.h"
#include "drv_usbd_int.h"
#define EP_TO_LOG(ep)       ((ep) & 0x7F)
#define EP_TO_IDX(ep)       (((ep) << 1) | ((ep) & 0x80 ? 1 : 0))
#define LOG_IN_TO_EP(ep)    ((ep) | 0x80)
#define LOG_OUT_TO_EP(ep)   ((ep) | 0x00)
#define IDX_TO_EP(ep)       (((ep) >> 1)|((ep) & 1) << 7)
#define NUM_ENDPOINTS           4
#define MAX_PACKET_NON_ISO      64
#define MAX_PACKET_ISO          (256 + 128)     // Spec can go up to 1023, only ram for this though
#define ENDPOINT_NON_ISO        (USB_EP_ATTR_ALLOW_BULK | USB_EP_ATTR_ALLOW_INT)

void USBPhyHw::init(USBPhyEvents *events)
{
    uint32_t total_bytes = 0;

    NVIC_DisableIRQ(USBHAL_IRQn);

    if (this->events == NULL) {
        sleep_manager_lock_deep_sleep();
    }
    this->events = events;
    sof_enabled = false;
    memset(epComplete, 0, sizeof(epComplete));
    memset(&hpcd.bp, 0, sizeof(hpcd.bp));


    hpcd.bp.core_enum = USB_CORE_ENUM_FS;
    hpcd.bp.phy_itf = USB_EMBEDDED_PHY;
    hpcd.bp.sof_enable = 0;
    hpcd.bp.core_speed = USB_SPEED_FULL;
    hpcd.bp.num_ep = NB_ENDPOINT;
    hpcd.bp.transfer_mode = USB_USE_FIFO;

    // Pass instance for usage inside call back
    instance = this;

#ifdef GD32F450
    // Configure USB pins and other clocks
    rcu_periph_clock_enable(RCU_GPIOA);
    rcu_periph_clock_enable(RCU_SYSCFG);

    pin_function(USBFS_DM, SET_PIN_FUNCTION(PIN_MODE_AF, PIN_OTYPE_PP, PIN_PUPD_NONE, PIN_AF_10)); // DM
    pin_function(USBFS_DP, SET_PIN_FUNCTION(PIN_MODE_AF, PIN_OTYPE_PP, PIN_PUPD_NONE, PIN_AF_10)); // DP

    rcu_pll48m_clock_config(RCU_PLL48MSRC_PLLQ);

    rcu_ck48m_clock_config(RCU_CK48MSRC_PLL48M);

#else
    rcu_usb_clock_config(RCU_CKUSB_CKPLL_DIV2_5);
#endif

    rcu_periph_clock_enable(RCU_USBFS);

    // Configure PCD and FIFOs
    hpcd.pData = (void*)this;

    /* configure USB capabilites */
    usb_basic_init (hpcd.bp, &hpcd.regs);

    /* initailizes the USB core*/
    usb_core_init (hpcd.bp, &hpcd.regs);

    /* initailizes device mode */
    usb_devcore_init (&hpcd);

    usb_dev_disconnect(&hpcd);

    /* Reserve space in the RX buffer for:
     * - 1 isochonous packet
     * - 2 max sized non-isochonous packets
     * - setup buffer - 10 words as specified by Reference Manual
     * - global nak out - 1 words as specified by Reference Manual
     */
    uint32_t fifo_size = (MAX_PACKET_ISO + 4) + (MAX_PACKET_NON_ISO + 4) * 2 + (10 * 4) + (1 * 4);

    usb_set_rxfifo(&hpcd.regs, (fifo_size / 4));
    total_bytes += fifo_size;

    /* Reserve Tx space up front */
    for (int i = 0; i < NUM_ENDPOINTS; i++) {
        fifo_size = tx_ep_sizes[i] + 4;
        usb_set_txfifo(&hpcd.regs, i, fifo_size / 4);
        total_bytes += fifo_size;
    }

    /* flush all Tx FIFOs */
    usb_txfifo_flush (&hpcd.regs, 0x10);

    /* flush entire Rx FIFO */
    usb_rxfifo_flush (&hpcd.regs);

    /* 1.25 kbytes */
    MBED_ASSERT(total_bytes <= 1280);

    // Configure interrupt vector
    NVIC_SetVector(USBHAL_IRQn, (uint32_t)&_usbisr);
    NVIC_SetPriority(USBHAL_IRQn, 1);
    NVIC_EnableIRQ(USBHAL_IRQn);
}

void USBPhyHw::deinit()
{
    usb_dev_stop(&hpcd);

    NVIC_DisableIRQ(USBHAL_IRQn);

    if (events != NULL) {
        sleep_manager_unlock_deep_sleep();
    }
    events = NULL;
}

void USBPhyHw::connect()
{
    usb_dev_connect(&hpcd);

    usb_globalint_enable(&hpcd);
}

void USBPhyHw::disconnect()
{
    usb_dev_disconnect(&hpcd);

    usb_globalint_disable(&hpcd);
}

void USBPhyHw::ep0_read(uint8_t *data, uint32_t size)
{
    uint32_t ret;

    epComplete[EP_TO_IDX(EP0OUT)] = 2;

    ret = usbd_ep_recev(&hpcd, EP0OUT, data, size > MAX_PACKET_SIZE_EP0 ? MAX_PACKET_SIZE_EP0 : size);

    MBED_ASSERT(ret == 0U);
}

uint32_t USBPhyHw::ep0_read_result()
{
    epComplete[EP_TO_IDX(EP0OUT)] = 0;

    return usbd_rxcount_get(&hpcd, 0);
}

void USBPhyHw::ep0_write(uint8_t *buffer, uint32_t size)
{
    /*  check that endpoint maximum size is not exceeding TX fifo */
    MBED_ASSERT(hpcd.dev.transc_in[0].max_len >= size);

    endpoint_write(EP0IN, buffer, size);
}

bool USBPhyHw::endpoint_add(usb_ep_t endpoint, uint32_t max_packet, usb_ep_type_t type)
{
    uint32_t len;

    /*
     * Endpoints are configured in init since re-configuring
     * fifos when endpoints are added or removed causes tests to fail.
     */
    if (endpoint & 0x80) {
        len = USBD_PCDEx_GetTxFiFo(&hpcd, endpoint & 0x7f);

        MBED_ASSERT(len >= max_packet);
    }

    uint32_t ret = usbd_ep_setup(&hpcd, endpoint, max_packet, type);

    MBED_ASSERT(ret == 0U);

    return (ret == 0U) ? true : false;
}

void USBPhyHw::endpoint_remove(usb_ep_t endpoint)
{
    uint32_t ret = usbd_ep_clear(&hpcd, endpoint);

    MBED_ASSERT(ret == 0U);
}

void USBPhyHw::endpoint_stall(usb_ep_t endpoint)
{
    uint32_t ret;

    ret = usbd_ep_stall(&hpcd, endpoint);

    MBED_ASSERT(ret == 0U);
}

void USBPhyHw::endpoint_unstall(usb_ep_t endpoint)
{
    uint32_t ret;

    ret = usbd_ep_stall_clear(&hpcd, endpoint);

    MBED_ASSERT(ret == 0U);
}

bool USBPhyHw::endpoint_read(usb_ep_t endpoint, uint8_t *data, uint32_t size)
{
    // clean reception end flag before requesting reception
    uint32_t ret = usbd_ep_recev(&hpcd, endpoint, data, size);

    MBED_ASSERT(ret == 0U);

    return true;
}

uint32_t USBPhyHw::endpoint_read_result(usb_ep_t endpoint)
{
    if (epComplete[EP_TO_IDX(endpoint)]==0) {
        /*  no reception possible !!! */
        return 0;
    } else if ((epComplete[EP_TO_IDX(endpoint)]!=1)) {
        return 0;
    }

    epComplete[EP_TO_IDX(endpoint)]= 0;

    return usbd_rxcount_get(&hpcd, endpoint);;
}

bool USBPhyHw::endpoint_write(usb_ep_t endpoint, uint8_t *data, uint32_t size)
{
    uint32_t ret;

    // clean transmission end flag before requesting transmission
    epComplete[EP_TO_IDX(endpoint)] = 2;
    ret = usbd_ep_send(&hpcd, endpoint, data, size);
    MBED_ASSERT(ret == 0U);

    // update the status
    if (ret != 0U) return false;

    // fix me return is too simple
    return true;
}

void USBPhyHw::process()
{
    usbd_isr(&instance->hpcd);

    // Re-enable interrupt
    NVIC_ClearPendingIRQ(USBHAL_IRQn);
    NVIC_EnableIRQ(USBHAL_IRQn);
}
